<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_user"
        android:icon="@drawable/ic_add"
        android:title="@string/add_user"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_info"
        android:title="@string/app_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit_app"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>