<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UpdateProfileFragment">

    <!-- Top App Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>


    <!-- Profile Info Dialog -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profileInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textColor="@color/white_variant"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar" />

    <ScrollView
        android:id="@+id/updateProfileInfoScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileInfoTextView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- User Profile Image -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImageView"
                android:layout_width="@dimen/bigger_image_dimen"
                android:layout_height="@dimen/bigger_image_dimen"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

            <!-- User Profile Change Image Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/changeImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                android:background="?selectableItemBackgroundBorderless"
                android:text="@string/change"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_small" />

            <!-- User Profile Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bigger"
                android:hint="@string/name"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:helperText="required*"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLength="20"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- User Profile username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/username"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorIconTint="@color/red"
                app:errorTextColor="@color/red"
                app:helperText="required*"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLength="16"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- User Profile Status -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/statusInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/status"
                app:counterEnabled="true"
                app:counterMaxLength="120"
                app:endIconMode="clear_text"
                app:helperText="required*"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/statusEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:maxLength="120"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <!-- Save Users Profile Info Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:backgroundTint="@color/blue"
        android:padding="@dimen/padding_small"
        android:text="@string/next"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Social Info Dialog -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/socialInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socials_info"
        android:textColor="@color/white_variant"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar" />

    <ScrollView
        android:id="@+id/updateSocialInfoScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/noteTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/socialInfoTextView">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- User Profile LinkedIn username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linkedInUsernameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bigger"
                android:hint="@string/linkedin_profile_username"
                app:counterEnabled="true"
                app:counterMaxLength="256"
                app:endIconMode="clear_text"
                app:helperText="optional*"
                app:startIconDrawable="@drawable/ic_linkedin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/linkedInUsernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLength="256"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- User Profile Twitter username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/twitterUsernameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/twitter_username"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:helperText="optional*"
                app:startIconDrawable="@drawable/ic_twitter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/twitterUsernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLength="15"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- User Profile Instagram username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/instagramUsernameInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/instagram_username"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:helperText="optional*"
                app:startIconDrawable="@drawable/ic_instagram">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/instagramUsernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLength="30"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- User Profile Whatsapp Number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/whatsappNumberInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/whatsapp_number"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:helperText="optional*"
                app:startIconDrawable="@drawable/ic_whatsapp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/whatsappNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <!-- Note Dialog -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/noteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/check_inputs"
        android:textColor="@color/white_variant"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Save Users Social Info Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:backgroundTint="@color/blue"
        android:padding="@dimen/padding_small"
        android:text="@string/save"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>